test_files/negative/duplicates/dictionary.stats
Version : 1.5
Incremental updates : 0
Neither updates nor object streams nor free objects nor encryption
PDF error : The same name appears several times in dictionary : /Type for object 1 at offset 15 [0xf] !
